:lipstick: fixed the animation clipping when pressing the like button

--- a/src/components/image/Image.css
+++ b/src/components/image/Image.css
@@ -21,6 +21,10 @@
   z-index: 8 !important;
 }
 
+.Image-primary--top {
+  z-index: 9 !important;
+}
+
 .Image-0 {
   z-index: 5;
 }
